# fmq

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: frontmatter.rs  lib.rs  main.rs  query.rs
tests/: integration.rs
tests/fixtures/errors/invalid-yaml/: input.md
tests/fixtures/init/add-title/: expr.txt  input.md  output.md
tests/fixtures/mutations/add-tag/: expr.txt  input.md  output.md
tests/fixtures/mutations/delete-field/: expr.txt  input.md  output.md
tests/fixtures/mutations/set-title/: expr.txt  input.md  output.md
tests/fixtures/queries/get-array/: input.md  output.txt
tests/fixtures/queries/get-nested/: expr.txt  input.md
tests/fixtures/queries/get-title/: input.md
