[package]
name = "fmq"
version = "0.1.0"
edition = "2021"
description = "jq for markdown frontmatter"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
jaq-parse = "1"
jaq-interpret = "1"
jaq-core = "1"
jaq-std = "1"

[dev-dependencies]
